style(fifth): make font bigger

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
         height: 500px;
       }
     </style>
+    <style>
+      #fifth-student-score-display {
+        font-size: 40px;
+      }
+    </style>
   </head>
   <body>
     <section id="firstAssignment">
@@ -1225,7 +1230,7 @@
           姓名
           <select data-select-student></select>
         </label>
-        <div data-fifth-display></div>
+        <div id="fifth-student-score-display" data-fifth-display></div>
       </main>
       <script>
         const fifth_display = document.querySelector("[data-fifth-display]");
