fix(fifth): text in student name select too small to read

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
       #fifth-student-score-display {
         font-size: 40px;
       }
+      #fifth-student-name-select {
+        font-size: 2rem;
+        padding: 10px;
+      }
     </style>
   </head>
   <body>
@@ -1228,7 +1232,7 @@
       <main>
         <label>
           姓名
-          <select data-select-student></select>
+          <select data-select-student id="fifth-student-name-select"></select>
         </label>
         <div id="fifth-student-score-display" data-fifth-display></div>
       </main>
