warn user about losing data

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
         display: flex;
         gap: 1rem;
       }
+      .warn {
+        background-color: lightpink;
+        padding: 8px;
+        width: fit-content;
+      }
     </style>
   </head>
   <body>
     <h1>XML、XSL编辑器</h1>
+    <h2 class="warn">刷新或关闭标签页你做的修改会全部丢失！</h2>
     <main class="editors">
       <section>
         <h3>XML数据</h3>
