--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         padding: 8px;
         width: fit-content;
       }
+      section > header {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+      }
     </style>
   </head>
   <body>
@@ -25,11 +30,17 @@
     <h2 class="warn">刷新或关闭标签页你做的修改会全部丢失！</h2>
     <main class="editors">
       <section>
-        <h3>XML数据</h3>
+        <header>
+          <h3>XML数据</h3>
+          <button data-format-xml>整理格式</button>
+        </header>
         <div id="xml" class="editor"></div>
       </section>
       <section>
-        <h3>XSL模版</h3>
+        <header>
+          <h3>XSL模版</h3>
+          <button data-format-xsl>整理格式</button>
+        </header>
         <div id="xsl" class="editor"></div>
       </section>
     </main>
@@ -137,11 +148,19 @@
           xslEdit.session.on("change", cb);
         }
 
-        genXmlXslPreview(
-          genEditor(oneXML, "xml"),
-          genEditor(oneXSL, "xsl"),
-          "#preview"
-        );
+        const xslEdit = genEditor(oneXSL, "xsl");
+        const xmlEdit = genEditor(oneXSL, "xml");
+        genXmlXslPreview(xmlEdit, xslEdit, "#preview");
+        document
+          .querySelector("[data-format-xsl]")
+          .addEventListener("click", () =>
+            xslEdit.session.setValue(B.beautify(xslEdit.session.getValue()))
+          );
+        document
+          .querySelector("[data-format-xml]")
+          .addEventListener("click", () =>
+            xmlEdit.session.setValue(B.beautify(xmlEdit.session.getValue()))
+          );
       })();
     </script>
   </body>
