call for contributions

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   </head>
   <body>
     <h1>XML、XSL编辑器</h1>
+    <h2>
+      仓库地址
+      <a href="https://github.com/li6in9muyou/xml-xsl-editor">
+        li6in9muyou/xml-xsl-editor </a
+      >，请帮助我完善本应用。
+    </h2>
     <section>
       <button data-save>保存</button>
       <button data-reset-data>重置数据</button>
