add emojis; add shortcut key label for save button;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>XML、XSL编辑器</title>
+    <title>✒️XML、XSL编辑器</title>
     <style>
       .editor {
         height: 500px;
@@ -21,16 +21,16 @@
     </style>
   </head>
   <body>
-    <h1>XML、XSL编辑器</h1>
+    <h1>XML、XSL编辑器✒️</h1>
     <h2>
       仓库地址
       <a href="https://github.com/li6in9muyou/xml-xsl-editor">
         li6in9muyou/xml-xsl-editor </a
-      >，请帮助我完善本应用。
+      >，请帮助我完善本应用 🙏。
     </h2>
     <section>
-      <button data-save>保存</button>
-      <button data-reset-data>重置数据</button>
+      <button data-save>💾保存(ctrl + s)</button>
+      <button data-reset-data>⚠️重置数据</button>
     </section>
     <main class="editors">
       <section>
@@ -48,7 +48,7 @@
         <div id="xsl" class="editor"></div>
       </section>
     </main>
-    <h3>输出的HTML预览（试试修改上面的代码，实时更新！）</h3>
+    <h3>输出的HTML预览👀（试试修改上面的代码，实时更新！）</h3>
     <div id="preview"></div>
     <script>
       const oneXML = `<?xml version="1.0" encoding="gb2312" standalone="no"?>
