fix: format xml button not working

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         .addEventListener("click", () => formatXMLXSL(xslEdit));
       document
         .querySelector("[data-format-xml]")
-        .addEventListener("click", () => () => formatXMLXSL(xmlEdit));
+        .addEventListener("click", () => formatXMLXSL(xmlEdit));
     </script>
     <script>
       document
