--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/xml-beautify@1.2.3/dist/XmlBeautify.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/li6in9muyou/fix-escaped-ampersand-not-preserved-xml-beautify@release/dist/XmlBeautify.js"></script>
     <script>
       ace.config.set(
         "basePath",
